--- a/MySportsAreaView/app/src/main/res/layout/activity_servlet_access.xml
+++ b/MySportsAreaView/app/src/main/res/layout/activity_servlet_access.xml
@@ -10,26 +10,75 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.terry.mysportsareaview.ServletAccess">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
     <Button
-        android:text="Connexion Servlet"
+        android:text="Connexion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/connexionButton"
+        android:onClick="conClick"
+        android:layout_marginBottom="105dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/conServ"
-        android:onClick="conClick" />
+        android:background="@drawable/button"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordField"
+        android:layout_above="@+id/connexionButton"
+        android:layout_alignStart="@+id/loginField"
+        android:layout_marginBottom="25dp" />
 
     <TextView
+        android:text="Mot de passe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/conServ"
+        android:layout_alignBottom="@+id/passwordField"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:id="@+id/textMsg" />
+        android:layout_marginBottom="44dp"
+        android:id="@+id/textView4" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text=""
+        android:ems="10"
+        android:id="@+id/loginField"
+        android:layout_marginBottom="50dp"
+        android:layout_above="@+id/passwordField"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/loginField"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/textView5" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textMsg"
+        android:layout_marginTop="70dp"
+        android:layout_below="@+id/passwordField"
+        android:layout_centerHorizontal="true" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar3"
+        android:max="100"
+        android:progress="50"
+        android:indeterminate="true"
+        android:layout_below="@+id/textMsg"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp" />
 
 </RelativeLayout>
