--- a/MySportsAreaView/app/src/main/res/layout/nav_header_main.xml
+++ b/MySportsAreaView/app/src/main/res/layout/nav_header_main.xml
@@ -9,14 +9,16 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
     android:gravity="bottom">
 
-    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+    <ImageView android:layout_width="75dp" android:layout_height="75dp"
+        android:paddingTop="10dp"
         android:paddingLeft="20dp"
-        android:src="@android:drawable/sym_def_app_icon" android:id="@+id/imageView" />
+        android:src="@drawable/logo"
+        android:scaleType="fitXY"
+        android:id="@+id/imageView" />
 
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
         android:paddingLeft="20dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="My Sports Area"
+        android:paddingTop="8dp" android:text="My Sports Area"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/textView3" />
 
